--- a/Firmware/Octopus/Trident_Octopus_Config.cfg
+++ b/Firmware/Octopus/Trident_Octopus_Config.cfg
@@ -12,6 +12,7 @@
 ## *** THINGS TO CHANGE/CHECK: ***
 ## MCU paths                            [mcu] section
 ## Thermistor types                     [extruder] and [heater_bed] sections - See 'sensor types' list at end of file
+## Leadscrew Rotation Distance          [stepper_z], [stepper_z1], [stepper_z2]
 ## Z Endstop Switch location            [safe_z_home] section
 ## Z Endstop Switch  offset for Z0      [stepper_z] section
 ## PID tune                             [extruder] and [heater_bed] sections
@@ -121,16 +122,15 @@ stealthchop_threshold: 0
 #   Z Stepper Settings
 #####################################################################
 
-## Z0 Stepper - Front Left
+##  Z0 Stepper - Front Left
 ##  Connected to MOTOR_2
 ##  Endstop connected to DIAG_2
 [stepper_z]
 step_pin: PF11
 dir_pin: PG3
 enable_pin: !PG5
-##T8x4 Lead Screws.  One rotation moves the bed 4mm 
-##Change according to integrated steppers purchased
-rotation_distance: 4
+# Rotation Distance for TR8x8 = 8, TR8x4 = 4, TR8x2 = 2
+# rotation_distance: 8    
 microsteps: 32
 endstop_pin: PG10
 ##  Z-position of nozzle (in mm) to z-endstop trigger point relative to print surface (Z0)
@@ -161,10 +161,8 @@ stealthchop_threshold: 0
 step_pin: PG4
 dir_pin: PC1
 enable_pin: !PA0
-##T8x4 Lead Screws.  One rotation moves the bed 4mm 
-##Change according to integrated steppers purchased
-rotation_distance: 4
-microsteps: 32
+# Rotation Distance for TR8x8 = 8, TR8x4 = 4, TR8x2 = 2
+# rotation_distance: 8  
 microsteps: 32
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
@@ -182,10 +180,8 @@ stealthchop_threshold: 0
 step_pin: PF9
 dir_pin: !PF10
 enable_pin: !PG2
-##T8x4 Lead Screws.  One rotation moves the bed 4mm 
-##Change according to integrated steppers purchased
-rotation_distance: 4
-microsteps: 32
+# Rotation Distance for TR8x8 = 8, TR8x4 = 4, TR8x2 = 2
+# rotation_distance: 8  
 microsteps: 32
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
@@ -223,7 +219,8 @@ full_steps_per_rotation: 200    #200 for 1.8 degree, 400 for 0.9 degree
 nozzle_diameter: 0.400
 filament_diameter: 1.75
 heater_pin: PA2
-##  Validate the following thermistor type to make sure it is correct (see bottom of file for additional options)
+##  Validate the following thermistor type to make sure it is correct
+##  See https://www.klipper3d.org/Config_Reference.html#common-thermistors for additional options
 # sensor_type: ATC Semitec 104GT-2
 sensor_pin: PF4
 min_temp: 10
@@ -258,8 +255,9 @@ stealthchop_threshold: 0
 ##  SSR Pin - HE1
 ##  Thermistor - TB
 heater_pin: PA3
-##  Validate the following thermistor type to make sure it is correct (see bottom of file for additional options)
-# sensor_type: NTC 100K MGB18-104F39050L32
+##  Validate the following thermistor type to make sure it is correct
+##  See https://www.klipper3d.org/Config_Reference.html#common-thermistors for additional options
+# sensor_type: Generic 3950
 sensor_pin: PF3
 ##  Adjust Max Power so your heater doesn't warp your bed. Rule of thumb is 0.4 watts / cm^2 .
 max_power: 0.6
@@ -541,12 +539,3 @@ gcode:
     
     BED_MESH_CLEAR
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END
-    
-##  Thermistor Types
-##   "EPCOS 100K B57560G104F"
-##   "ATC Semitec 104GT-2"
-##   "NTC 100K beta 3950"
-##   "Honeywell 100K 135-104LAG-J01"
-##   "NTC 100K MGB18-104F39050L32" (Keenovo Heater Pad)
-##   "AD595"
-##   "PT100 INA826"
