Updates from feedback. Reduced Z motor current. Removed QGL and replaced with z_tilt. Comment out PA values.

--- a/Firmware/Octopus/Trident_Octopus_Config.cfg
+++ b/Firmware/Octopus/Trident_Octopus_Config.cfg
@@ -11,7 +11,7 @@
 
 ## *** THINGS TO CHANGE/CHECK: ***
 ## MCU paths                            [mcu] section
-## Thermistor types                     [extruder] and [heater_bed] sections - See 'sensor types' list at end of file
+## Thermistor types                     [extruder] and [heater_bed] sections
 ## Leadscrew Rotation Distance          [stepper_z], [stepper_z1], [stepper_z2]
 ## Z Endstop Switch location            [safe_z_home] section
 ## Z Endstop Switch  offset for Z0      [stepper_z] section
@@ -140,9 +140,8 @@ endstop_pin: PG10
 position_endstop: -0.5
 ## All builds use same Max Z
 position_max: 250
-position_max: 250
 position_min: -2.5
-homing_speed: 35.0
+homing_speed: 8.0 # Leadscrews are slower than 2.4, 10 is a recommended max.
 second_homing_speed: 3
 homing_retract_dist: 3
 
@@ -150,8 +149,8 @@ homing_retract_dist: 3
 [tmc2209 stepper_z]
 uart_pin: PC6
 interpolate: False
-run_current: 0.8
-hold_current: 0.8
+run_current: 0.6
+hold_current: 0.6
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
@@ -169,8 +168,8 @@ microsteps: 32
 [tmc2209 stepper_z1]
 uart_pin: PC7
 interpolate: False
-run_current: 0.8
-hold_current: 0.8
+run_current: 0.6
+hold_current: 0.6
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
@@ -188,8 +187,8 @@ microsteps: 32
 [tmc2209 stepper_z2]
 uart_pin: PF2
 interpolate: False
-run_current: 0.8
-hold_current: 0.8
+run_current: 0.6
+hold_current: 0.6
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
@@ -232,9 +231,9 @@ pid_kp = 26.213
 pid_ki = 1.304
 pid_kd = 131.721
 ##  Try to keep pressure_advance below 1.0
-pressure_advance: 0.05
+# pressure_advance: 0.05
 ##  Default is 0.040, leave stock
-pressure_advance_smooth_time: 0.040
+# pressure_advance_smooth_time: 0.040
 
 ##  E0 on MOTOR6
 ##  Make sure to update below for your relevant driver (2208 or 2209)
@@ -363,55 +362,48 @@ home_xy_position:-10,-10
 speed:100
 z_hop:10
 
-[quad_gantry_level]
-##  Use QUAD_GANTRY_LEVEL to level a gantry.
-##  Min & Max gantry corners - measure from nozzle at MIN (0,0) and 
-##  MAX (250, 250), (300,300), or (350,350) depending on your printer size
-##  to respective belt positions
+[z_tilt]
+##  Use Z_TILT_ADJUST to level the bed .
+##  z_positions: Location of toolhead
 
-#--------------------------------------------------------------------
-##  Gantry Corners for 250mm Build
-##  Uncomment for 250mm build
-#gantry_corners:
-#   -60,-10
-#   310, 320
-##  Probe points
-#points:
-#   50,25
-#   50,175
-#   200,175
-#   200,25
-    
-##  Gantry Corners for 300mm Build
-##  Uncomment for 300mm build
-#gantry_corners:
-#   -60,-10
-#   360,370
-##  Probe points
-#points:
-#   50,25
-#   50,225
-#   250,225
-#   250,25
+##--------------------------------------------------------------------
+## Uncomment below for 250mm build
+z_positions:
+    -50, 18
+    125, 298
+    300, 18
+points:
+    30, 5
+    125, 195
+    220, 5
 
-##  Gantry Corners for 350mm Build
-##  Uncomment for 350mm build
-#gantry_corners:
-#   -60,-10
-#   410,420
-##  Probe points
+## Uncomment below for 300mm build
+#z_positions:
+#   -50, 18
+#   150, 348
+#   350, 18
 #points:
-#   50,25
-#   50,275
-#   300,275
-#   300,25
+#   30, 5
+#   150, 245
+#   270, 5
 
-#--------------------------------------------------------------------
-speed: 100
+## Uncomment below for 350mm build
+#z_positions:
+#   -50, 18
+#   175, 398
+#   400, 18
+#points:
+#   30, 5
+#   175, 295
+#   320, 5
+
+
+##--------------------------------------------------------------------
+
+speed: 200
 horizontal_move_z: 10
 retries: 5
 retry_tolerance: 0.0075
-max_adjust: 10
 
 ########################################
 # EXP1 / EXP2 (display) pins
