Comment out all z_tilt options to require user choice.

--- a/Firmware/Octopus/Trident_Octopus_Config.cfg
+++ b/Firmware/Octopus/Trident_Octopus_Config.cfg
@@ -368,14 +368,14 @@ z_hop:10
 
 ##--------------------------------------------------------------------
 ## Uncomment below for 250mm build
-z_positions:
-    -50, 18
-    125, 298
-    300, 18
-points:
-    30, 5
-    125, 195
-    220, 5
+#z_positions:
+#    -50, 18
+#    125, 298
+#    300, 18
+#points:
+#    30, 5
+#    125, 195
+#    220, 5
 
 ## Uncomment below for 300mm build
 #z_positions:
