--- a/Firmware/Octopus/Trident_Octopus_Config.cfg
+++ b/Firmware/Octopus/Trident_Octopus_Config.cfg
@@ -173,7 +173,7 @@ stealthchop_threshold: 0
 ##  Connected to MOTOR_4
 [stepper_z2]
 step_pin: PF9
-dir_pin: !PF10
+dir_pin: PF10
 enable_pin: !PG2
 # Rotation Distance for TR8x8 = 8, TR8x4 = 4, TR8x2 = 2
 # rotation_distance: 8  
