Add G90 to PRINT_START macro

--- a/Firmware/Octopus/Trident_Octopus_Config.cfg
+++ b/Firmware/Octopus/Trident_Octopus_Config.cfg
@@ -486,6 +486,7 @@ gcode:
     G28
     Z_TILT_ADJUST
     G28
+    G90                            ; absolute positioning
 
     ##  Uncomment for for your size printer:
     #--------------------------------------------------------------------
