--- a/Firmware/Voron_Trident_SKR14_EXPMOT.cfg
+++ b/Firmware/Voron_Trident_SKR14_EXPMOT.cfg
@@ -468,7 +468,8 @@ gcode:
     G28 Y0 X0 Z0
     Z_TILT_ADJUST
     G28 Y0 X0 Z0
-    
+    G90                            ; absolute positioning
+
     ##Purge Line Gcode
     #G92 E0;
     #G90
