update thermistor definitions to new types

--- a/Firmware/Voron_Trident_SKR14_EXPMOT.cfg
+++ b/Firmware/Voron_Trident_SKR14_EXPMOT.cfg
@@ -68,14 +68,14 @@
 ## M3_ENABLE_PIN       1.22    
 ## M3_UART             0.28
 
-## Thermistor Types
+## 	Thermistor Types
 ##   "EPCOS 100K B57560G104F"
-##   "ATC Semitec 104GT-2"
-##   "NTC 100K beta 3950"
+##   "ATC Semitec 104NT-4-R025H42G"
+##   "Generic 3950"
 ##   "Honeywell 100K 135-104LAG-J01"
 ##   "NTC 100K MGB18-104F39050L32"
-##   "AD595"
-##   "PT100 INA826"
+##   "SliceEngineering 450"
+##   "TDK NTCG104LH104JT1"
 ##===================================================================.
 
 [virtual_sdcard]
@@ -287,7 +287,7 @@ pressure_advance: 0.67
 pressure_advance_smooth_time: 0.040
 heater_pin: P2.7
 ##	Validate the following thermistor type to make sure it is correct
-sensor_type: NTC 100K beta 3950
+sensor_type: Generic 3950
 sensor_pin: P0.24
 min_extrude_temp: 180
 min_temp: 0
