--- a/Firmware/Voron_Trident_SKR_1.3.cfg
+++ b/Firmware/Voron_Trident_SKR_1.3.cfg
@@ -54,14 +54,14 @@
 ## FAN                2.3
 ## SERVO              2.0
 
-## Thermistor Types
+## 	Thermistor Types
 ##   "EPCOS 100K B57560G104F"
-##   "ATC Semitec 104GT-2"
-##   "NTC 100K beta 3950"
+##   "ATC Semitec 104NT-4-R025H42G"
+##   "Generic 3950"
 ##   "Honeywell 100K 135-104LAG-J01"
 ##   "NTC 100K MGB18-104F39050L32"
-##   "AD595"
-##   "PT100 INA826"
+##   "SliceEngineering 450"
+##   "TDK NTCG104LH104JT1"
 ##===================================================================
 
 #Mainsail support
@@ -319,7 +319,7 @@ nozzle_diameter: 0.400
 filament_diameter: 1.75
 heater_pin: xye:P2.7
 ##	Validate the following thermistor type to make sure it is correct
-sensor_type: NTC 100K beta 3950
+sensor_type: Generic 3950
 sensor_pin: xye:P0.24
 min_temp: 10
 max_temp: 270
