Remove default sensor_types

--- a/Firmware/Voron_Trident_SKR14_EXPMOT.cfg
+++ b/Firmware/Voron_Trident_SKR14_EXPMOT.cfg
@@ -1,8 +1,8 @@
 ## *** THINGS TO CHANGE/CHECK: ***
-## MCU paths                         	[mcu] section
-## Thermistor types                      [extruder] and [heater_bed] sections - See 'sensor types' list at end of file
-## Z Endstop Switch location       		[homing_override] section
-## Z Endstop Switch  offset for Z0  		[stepper_z] section
+## MCU paths                         	 [mcu] section
+## Thermistor types                      [extruder] and [heater_bed] sections - See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types
+## Z Endstop Switch location       		 [homing_override] section
+## Z Endstop Switch  offset for Z0       [stepper_z] section
 ## PID tune                              [extruder] and [heater_bed] sections
 ## Fine tune E steps                     [extruder] section
 
@@ -65,15 +65,6 @@
 ## M3_DIR_PIN          0.15    
 ## M3_ENABLE_PIN       1.22    
 ## M3_UART             0.28
-
-## Thermistor Types
-##   "EPCOS 100K B57560G104F"
-##   "ATC Semitec 104GT-2"
-##   "NTC 100K beta 3950"
-##   "Honeywell 100K 135-104LAG-J01"
-##   "NTC 100K MGB18-104F39050L32"
-##   "AD595"
-##   "PT100 INA826"
 ##===================================================================.
 
 [virtual_sdcard]
@@ -284,8 +275,9 @@ filament_diameter: 1.750
 pressure_advance: 0.67
 pressure_advance_smooth_time: 0.040
 heater_pin: P2.7
-##	Validate the following thermistor type to make sure it is correct
-sensor_type: NTC 100K beta 3950
+## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
+## Use "Generic 3950" for NTC 100k 3950 thermistors
+sensor_type:
 sensor_pin: P0.24
 min_extrude_temp: 180
 min_temp: 0
@@ -311,8 +303,9 @@ stealthchop_threshold: 0
 #####################################################################   
 [heater_bed]
 heater_pin: P2.5
-##  Choose the correct thermistor for your heater
-sensor_type: EPCOS 100K B57560G104F
+## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
+## Use "Generic 3950" for Keenovo heaters
+sensor_type:
 sensor_pin: P0.25
 ##	Adjust Max Power so your heater doesn't warp your bed
 max_power: 0.6
