--- a/Firmware/Voron_Trident_SKR_1.3.cfg
+++ b/Firmware/Voron_Trident_SKR_1.3.cfg
@@ -1,8 +1,8 @@
 ## *** THINGS TO CHANGE/CHECK: ***
-## MCU paths                         	[mcu] section
-## Thermistor types                      [extruder] and [heater_bed] sections - See 'sensor types' list at end of file
-## Z Endstop Switch location       		[homing_override] section
-## Z Endstop Switch  offset for Z0  		[stepper_z] section
+## MCU paths                         	 [mcu] section
+## Thermistor types                      [extruder] and [heater_bed] sections - See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types
+## Z Endstop Switch location       		 [homing_override] section
+## Z Endstop Switch  offset for Z0       [stepper_z] section
 ## PID tune                              [extruder] and [heater_bed] sections
 ## Fine tune E steps                     [extruder] section
 
@@ -51,15 +51,6 @@
 ## TB  (Bed Temp)     0.23
 ## FAN                2.3
 ## SERVO              2.0
-
-## Thermistor Types
-##   "EPCOS 100K B57560G104F"
-##   "ATC Semitec 104GT-2"
-##   "NTC 100K beta 3950"
-##   "Honeywell 100K 135-104LAG-J01"
-##   "NTC 100K MGB18-104F39050L32"
-##   "AD595"
-##   "PT100 INA826"
 ##===================================================================
 
 #Mainsail support
@@ -316,8 +307,9 @@ full_steps_per_rotation: 200
 nozzle_diameter: 0.400
 filament_diameter: 1.75
 heater_pin: xye:P2.7
-##	Validate the following thermistor type to make sure it is correct
-sensor_type: NTC 100K beta 3950
+## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
+## Use "Generic 3950" for NTC 100k 3950 thermistors
+sensor_type:
 sensor_pin: xye:P0.24
 min_temp: 10
 max_temp: 270
@@ -350,8 +342,9 @@ stealthchop_threshold: 0
 ###############
 [heater_bed]
 heater_pin: P2.4
-##  Choose the correct thermistor for your heater
-sensor_type: NTC 100K MGB18-104F39050L32
+## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
+## Use "Generic 3950" for Keenovo heaters
+sensor_type:
 sensor_pin: P0.23
 ##	Adjust Max Power so your heater doesn't warp your bed
 max_power: 0.6
