Comment out sensor_types, convert tabs to spaces

--- a/Firmware/Voron_Trident_SKR14_EXPMOT.cfg
+++ b/Firmware/Voron_Trident_SKR14_EXPMOT.cfg
@@ -1,7 +1,7 @@
 ## *** THINGS TO CHANGE/CHECK: ***
-## MCU paths                         	 [mcu] section
+## MCU paths                             [mcu] section
 ## Thermistor types                      [extruder] and [heater_bed] sections - See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types
-## Z Endstop Switch location       		 [homing_override] section
+## Z Endstop Switch location             [homing_override] section
 ## Z Endstop Switch  offset for Z0       [stepper_z] section
 ## PID tune                              [extruder] and [heater_bed] sections
 ## Fine tune E steps                     [extruder] section
@@ -48,7 +48,7 @@
 ## TB  (Bed Temp)     0.25
 ## FAN0               2.3
 ## SERVO              2.0
-## PROBE			  0.10
+## PROBE              0.10
 
 ## Expander
 ## M1_STEP_PIN         0.18    
@@ -86,7 +86,7 @@ max_z_accel: 100
 square_corner_velocity: 5.0  
 
 #####################################################################
-# 	X/Y Stepper Settings
+#   X/Y Stepper Settings
 #####################################################################\
 
 ######
@@ -106,15 +106,15 @@ rotation_distance: 40
 full_steps_per_rotation: 400
 endstop_pin: !P1.29
 position_min: 0
-##	Uncomment below for 250mm build
+##  Uncomment below for 250mm build
 #position_endstop: 250
 #position_max: 250
 
-##	Uncomment for 300mm build
+##  Uncomment for 300mm build
 #position_endstop: 300
 #position_max: 300
 
-##	Uncomment for 350mm build
+##  Uncomment for 350mm build
 #position_endstop: 350
 #position_max: 350
 
@@ -146,15 +146,15 @@ rotation_distance: 40
 full_steps_per_rotation: 400
 endstop_pin: !P1.28
 ##--------------------------------------------------------------------
-##	Uncomment for 250mm build
+##  Uncomment for 250mm build
 #position_endstop: 250
 #position_max: 250
 
-##	Uncomment for 300mm build
+##  Uncomment for 300mm build
 #position_endstop: 300
 #position_max: 300
 
-##	Uncomment for 350mm build
+##  Uncomment for 350mm build
 #position_endstop: 350
 #position_max: 350
 ##--------------------------------------------------------------------
@@ -169,7 +169,7 @@ hold_current: 0.750
 
 
 #####################################################################
-# 	Z Stepper Settings
+#   Z Stepper Settings
 #####################################################################
 
 ######
@@ -277,7 +277,7 @@ pressure_advance_smooth_time: 0.040
 heater_pin: P2.7
 ## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
 ## Use "Generic 3950" for NTC 100k 3950 thermistors
-sensor_type:
+#sensor_type:
 sensor_pin: P0.24
 min_extrude_temp: 180
 min_temp: 0
@@ -288,7 +288,7 @@ pid_ki = 1.304
 pid_kd = 131.721
 #Set appropriate once tuning your printer
 #pressure_advance: .05
-##	Default is 0.040, leave stock
+##  Default is 0.040, leave stock
 pressure_advance_smooth_time: 0.040
 
 [tmc2209 extruder]
@@ -299,15 +299,15 @@ sense_resistor: 0.110
 stealthchop_threshold: 0
 
 #####################################################################
-# 	Bed Heater
+#   Bed Heater
 #####################################################################   
 [heater_bed]
 heater_pin: P2.5
 ## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
 ## Use "Generic 3950" for Keenovo heaters
-sensor_type:
+#sensor_type:
 sensor_pin: P0.25
-##	Adjust Max Power so your heater doesn't warp your bed
+##  Adjust Max Power so your heater doesn't warp your bed
 max_power: 0.6
 min_temp: 0
 max_temp: 120
@@ -317,7 +317,7 @@ pid_ki: 2.347
 pid_kd: 363.769
 
 #####################################################################
-# 	Probe
+#   Probe
 #####################################################################
 
 ######
@@ -338,7 +338,7 @@ samples_tolerance: 0.05
 samples_tolerance_retries: 3
 
 #####################################################################
-# 	Fan Control
+#   Fan Control
 #####################################################################
 
 ######
@@ -364,7 +364,7 @@ heater_temp: 50.0
 ## may be sought for MOSFET controlled ports.
 
 #####################################################################
-# 	Homing and Gantry Adjustment Routines
+#   Homing and Gantry Adjustment Routines
 #####################################################################
 
 [idle_timeout]
@@ -377,74 +377,74 @@ gcode:
    G90
    G0 Z5 F600
    G28 X Y
-   ##	XY Location of the Z Endstop Switch
-   ##	Update X and Y to your values (such as X157, Y305) after going through
-   ##	Z Endstop Pin Location Definition step.
+   ##   XY Location of the Z Endstop Switch
+   ##   Update X and Y to your values (such as X157, Y305) after going through
+   ##   Z Endstop Pin Location Definition step.
    G0 X-10 Y-10 F3600 
    
    G28 Z
    G0 Z10 F1800
 
       
-   	##	Uncomment for for your size printer:
-   	## 	Rough measurement is the middle of your bed.
+    ##  Uncomment for for your size printer:
+    ##  Rough measurement is the middle of your bed.
 #--------------------------------------------------------------------
-   	##	Uncomment for 250mm build
-   	#G0 X125 Y125 Z30 F3600
+    ##  Uncomment for 250mm build
+    #G0 X125 Y125 Z30 F3600
    
-	##	Uncomment for 300 build
-   	#G0 X150 Y150 Z30 F3600
+    ##  Uncomment for 300 build
+    #G0 X150 Y150 Z30 F3600
 
-    ##	Uncomment for 350 build
-   	#G0 X175 Y175 Z30 F3600
+    ##  Uncomment for 350 build
+    #G0 X175 Y175 Z30 F3600
 #--------------------------------------------------------------------
 
 #####################################################################
-# 	Displays
+#   Displays
 #####################################################################
 
 #Using the EXP-MOT Expander uses up standard Mini FYSETC Capable Display
 #Ports.  Other solutions must be procured.
 
 #####################################################################
-# 	Macros
+#   Macros
 #####################################################################
 
 [z_tilt]
-##	Use Z_TILT_ADJUST to level the bed .
-##	z_positions: Location of toolhead
+##  Use Z_TILT_ADJUST to level the bed .
+##  z_positions: Location of toolhead
 
 ##--------------------------------------------------------------------
 ## Uncomment below for 250mm build
 #z_positions:
-#	-50, 18
-#	125, 298
-#	300, 18
+#   -50, 18
+#   125, 298
+#   300, 18
 #points:
-#	30, 5
-#	125, 195
-#	220, 5
+#   30, 5
+#   125, 195
+#   220, 5
 
 ## Uncomment below for 300mm build
 #z_positions:
-#	-50, 18
-#	150, 348
-#	350, 18
+#   -50, 18
+#   150, 348
+#   350, 18
 
 #points:
-#	30, 5
-#	150, 245
-#	270, 5
+#   30, 5
+#   150, 245
+#   270, 5
 
 ## Uncomment below for 350mm build
 #z_positions:
-#	-50, 18
-#	175, 398
-#	400, 18
+#   -50, 18
+#   175, 398
+#   400, 18
 #points:
-#	30, 5
-#	175, 295
-#	320, 5
+#   30, 5
+#   175, 295
+#   320, 5
 
 
 ##--------------------------------------------------------------------
@@ -521,4 +521,4 @@ gcode:
     G90                              ; absolute positioning
     G0 X{max_x / 2} Y{max_y} F3600   ; park nozzle at rear
     M117 Finished!
-	
+    
