--- a/Firmware/Octopus/Trident_Octopus_Config.cfg
+++ b/Firmware/Octopus/Trident_Octopus_Config.cfg
@@ -11,7 +11,7 @@
 
 ## *** THINGS TO CHANGE/CHECK: ***
 ## MCU paths                            [mcu] section
-## Thermistor types                     [extruder] and [heater_bed] sections
+## Thermistor types                     [extruder] and [heater_bed] sections - See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types
 ## Leadscrew Rotation Distance          [stepper_z], [stepper_z1], [stepper_z2]
 ## Z Endstop Switch location            [safe_z_home] section
 ## Z Endstop Switch  offset for Z0      [stepper_z] section
@@ -213,9 +213,9 @@ full_steps_per_rotation: 200    #200 for 1.8 degree, 400 for 0.9 degree
 nozzle_diameter: 0.400
 filament_diameter: 1.75
 heater_pin: PA2
-##  Validate the following thermistor type to make sure it is correct
-##  See https://www.klipper3d.org/Config_Reference.html#common-thermistors for additional options
-#sensor_type: ATC Semitec 104GT-2
+## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
+## Use "Generic 3950" for NTC 100k 3950 thermistors
+#sensor_type:
 sensor_pin: PF4
 min_temp: 10
 max_temp: 270
@@ -248,9 +248,9 @@ stealthchop_threshold: 0
 ##  SSR Pin - HE1
 ##  Thermistor - TB
 heater_pin: PA3
-##  Validate the following thermistor type to make sure it is correct
-##  See https://www.klipper3d.org/Config_Reference.html#common-thermistors for additional options
-#sensor_type: Generic 3950
+## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
+## Use "Generic 3950" for Keenovo heaters
+#sensor_type:
 sensor_pin: PF3
 ##  Adjust Max Power so your heater doesn't warp your bed. Rule of thumb is 0.4 watts / cm^2 .
 max_power: 0.6
