--- a/Firmware/Voron_Trident_SKR14_EXPMOT.cfg
+++ b/Firmware/Voron_Trident_SKR14_EXPMOT.cfg
@@ -272,8 +272,6 @@ full_steps_per_rotation: 200
 gear_ratio: 50:17
 nozzle_diameter: 0.400
 filament_diameter: 1.750
-pressure_advance: 0.67
-pressure_advance_smooth_time: 0.040
 heater_pin: P2.7
 ## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
 ## Use "Generic 3950" for NTC 100k 3950 thermistors
@@ -287,7 +285,7 @@ pid_kp = 26.213
 pid_ki = 1.304
 pid_kd = 131.721
 #Set appropriate once tuning your printer
-#pressure_advance: .05
+pressure_advance: .05
 ##  Default is 0.040, leave stock
 pressure_advance_smooth_time: 0.040
 
