--- a/Firmware/Voron_Trident_SKR_1.3.cfg
+++ b/Firmware/Voron_Trident_SKR_1.3.cfg
@@ -297,11 +297,16 @@ stealthchop_threshold: 0
 step_pin: xye:P2.13
 dir_pin: xye:P0.11
 enable_pin: !xye:P2.12
-# Tune per individual printer
-# Default for Bondtech 5mm Bore Drive Gears
-rotation_distance: 22.6789511
-# Tune for extruder 
-gear_ratio: 50:17
+##  Update value below when you perform extruder calibration
+##  If you ask for 100mm of filament, but in reality it is 98mm:
+##  rotation_distance = <previous_rotation_distance> * <actual_extrude_distance> / 100
+##  22.6789511 is a good starting point
+rotation_distance: 22.6789511   #Bondtech 5mm Drive Gears
+##  Update Gear Ratio depending on your Extruder Type
+##  Use 50:10 for Stealthburner/Clockwork 2
+##  Use 50:17 for Afterburner/Clockwork (BMG Gear Ratio)
+##  Use 80:20 for M4, M3.1
+gear_ratio: 50:10
 microsteps: 16
 full_steps_per_rotation: 200
 nozzle_diameter: 0.400
