Fix config file consistency and clarify GCode state command usage
The PRINT_END macro in the Octopus config file contains a pair of
SAVE_GCODE_STATE/RESTORE_GCODE_STATE command. The purpose of those
commands is to allow the macro to perfom actions at the end of the
print and then restore the printer state as it was prior to the
macro's execution (restore coordinate system and speeds).

However, there was some confusion as to the effect of those calls,
particularly the RESTORE_GCODE_STATE. What is desired is that the
printer state is restored but the toolhead position is not.

To clarify the intention and prevent any issues, the "MOVE=0"
argument to RESTORE_GCODE_STATE is added as to explicitly prevent
any toolhead position changes and a comment is added to describe
the purpose of the commands.

Since having the commands in the PRINT_END macro is something that
is needed, the same commands have also been added to any of the
other configs which were missing it.

--- a/Firmware/Voron_Trident_SKR14_EXPMOT.cfg
+++ b/Firmware/Voron_Trident_SKR14_EXPMOT.cfg
@@ -513,6 +513,8 @@ gcode:
     {% endif %}
     
     #  Commence PRINT_END
+    SAVE_GCODE_STATE NAME=STATE_PRINT_END
+
     M400                             ; wait for buffer to clear
     G92 E0                           ; zero the extruder
     G1 E-4.0 F3600                   ; retract
@@ -525,4 +527,12 @@ gcode:
     M106 S0                          ; turn off fan
     G90                              ; absolute positioning
     G0 X{max_x / 2} Y{max_y} F3600   ; park nozzle at rear
+
+    # The purpose of the SAVE_GCODE_STATE/RESTORE_GCODE_STATE
+    # command pair is to restore the printer's coordinate system
+    # and speed settings since the commands above change them.
+    # However, to prevent any accidental, unintentional toolhead
+    # moves when restoring the state, explicitly set MOVE=0.
+    RESTORE_GCODE_STATE NAME=STATE_PRINT_END MOVE=0
+
     M117 Finished!
