--- a/Firmware/Kraken/Voron_Trident_Kraken_Config.cfg
+++ b/Firmware/Kraken/Voron_Trident_Kraken_Config.cfg
@@ -169,7 +169,7 @@ stealthchop_threshold: 0
 ##  Z1 Stepper - Rear Center
 ##  Connected to Motor_6-S6
 [stepper_z1]
-sstep_pin: PG11
+step_pin: PG11
 dir_pin: PD7
 enable_pin: !PG12
 # Rotation Distance for TR8x8 = 8, TR8x4 = 4, TR8x2 = 2
