"ls /dev/serial/by-id/*"

--- a/Firmware/Voron_Trident_SKR14_EXPMOT.cfg
+++ b/Firmware/Voron_Trident_SKR14_EXPMOT.cfg
@@ -74,7 +74,7 @@ path: ~/gcode_files
 [display_status]
 
 [mcu]
-###Change to device found by "ls -l /dev/serial/by-id/" with just one this MCU connected to Pi
+###Change to device found by "ls /dev/serial/by-id/*" with just one this MCU connected to Pi
 serial: /dev/serial/by-id/usb-Klipper_lpc1769_XXXXXXXXXXXXXXXXXXX
 
 [printer]
