--- a/Firmware/Voron_Trident_SKR_1.3.cfg
+++ b/Firmware/Voron_Trident_SKR_1.3.cfg
@@ -71,10 +71,10 @@ max_z_accel: 100
 square_corner_velocity: 5.0  
 
 [mcu]
-###Change to device found by "ls -l /dev/serial/by-id/" with just one this MCU connected to Pi
+###Change to device found by "ls /dev/serial/by-id/*" with just one this MCU connected to Pi
 serial: /dev/serial/by-id/usb-Klipper_lpc1768_XXXXXXXXXXXXXXXXXXXXX
 
-###Change to device found by "ls -l /dev/serial/by-id/"" with just one this MCU connected to Pi
+###Change to device found by "ls /dev/serial/by-id/*" with just one this MCU connected to Pi
 [mcu xye]
 serial: /dev/serial/by-id/usb-Klipper_lpc1768_XXXXXXXXXXXXXXXXXXXXX
 
